# OpenGravity

./: .env.example  .gitignore  AGENT.md  AGENTS.md  BASELINE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  RELEASE.md  ROADMAP.md  deny.toml
.agents/decisions/: current_state.md
.agents/rules/: README.md  architecture_rules.md  rust_quality_rules.md  validation.md  validation_rules.md
.agents/workflows/: coverage_hardening.md  dependency_change.md  refactor_safely.md  stabilize.md
.cargo/: config.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  claude-review-prompt.md  claude-review.yml  review-script.sh
docs/: ARCHITECTURE.md  KNOWN_FRAGILITIES.md  PHASES.md
docs/adr/: 001-message-contract.md  002-agent-loop-baseline.md
docs/architecture/: OpenGravity-Active-State.md  OpenGravity-Debug-Discipline.md  OpenGravity-Dev-Protocol.md  OpenGravity-Master-Architecture.md  OpenGravity-Patch-Template.md  OpenGravity-Phase-Gates.md  OpenGravity-Roadmap.md  tool-invocation.md
docs/security/: dependency-audit.md
docs/testing/: e2e-scenarios.md
scripts/: bootstrap-dev.sh  check.sh  check_fast.sh  check_full.sh  test-baseline.sh
src/: lib.rs  main.rs
src/agent/: executor.rs  loop.rs  memory_bridge.rs  mod.rs  planner.rs
src/bot/: telegram.rs
src/config/: env.rs
src/db/: schema.rs  sqlite.rs
src/domain/: message.rs  mod.rs  tool.rs
tests/: conversation_regression.rs  e2e_phase_2_10.md  e2e_scenarios.rs  security_tests.rs
(+25 files in other folders)
