[package]
name = "open_gravity"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "OpenGravity - Local-first AI agent"

[dependencies]
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
teloxide = { version = "0.14", features = ["macros", "rustls"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
anyhow = "1.0"
thiserror = "1.0"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
chrono = "0.4"
async-trait = "0.1"
libc = "0.2"

[dev-dependencies]
mockall = "0.12"
wiremock = "0.6"
serial_test = "3.4.0"
